# ops4jira

./: CHANGELOG.md  LICENSE  LICENSE-CODE  LICENSE-SPEC  NOTICE  PRIOR-ART.md  README.md  ROADMAP.md  pyproject.toml
examples/github-actions/: auto-transition.yml  ref-gate.yml
src/jiraops/: audit.py  cli.py  decompose.py  transport.py
src/ops4jira/: cli.py  refgate.py  transition.py  transport.py
tests/: test_audit.py  test_cli.py  test_decompose.py  test_refgate.py  test_transition.py  test_transport.py
